fix(front): words wrapping and styling for inline code;

--- a/dataans/public/css/properties.css
+++ b/dataans/public/css/properties.css
@@ -31,6 +31,7 @@ body {
     --note-time-label-text-color: #b0bbb5;
     --note-table-border-color: #444c56;
     --note-code-block-background-color: #031e24;
+    --note-inline-code-text-color: #eeaf6e;
 
     --editor-file-background-color: #232634;
 
